align css and avoid space in all file

--- a/stylesheets/wishlist.css
+++ b/stylesheets/wishlist.css
@@ -8,7 +8,3 @@
     grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
     gap: 1rem;
 }
-
-.demo {
-    background-color: aqua;
-}
